fix: less specific text alignment fix

--- a/scss/components/_Forms.scss
+++ b/scss/components/_Forms.scss
@@ -26,12 +26,8 @@ $label-font-size: $font-size-base !default;
   max-width: 100%;
   outline: none;
   padding: $padding-small;
+  text-align: left;
   width: 100%;
-  .rev-TextCenter &,
-  .rev-TextRight & {
-    text-align: left;
-  }
-
   &:active,
   &:focus {
     background-color: $input-bkgd-focus;
@@ -56,11 +52,7 @@ $label-font-size: $font-size-base !default;
   display: block;
   font-size: $label-font-size;
   margin: 0 0 $margin-base;
-  .rev-TextCenter &,
-  .rev-TextRight & {
-    text-align: left;
-  }
-
+  text-align: left;
   .rev-Button,
   .rev-Input,
   .rev-Select,
